Avoid list items to overlap
The list items height were constant so it could cause some overlapping problem when reducing the windows width

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ footer a:hover{
 
   #navbar-list li {
     background-color: transparent;
-    height: 50px;
+    height: auto;
     line-height: 50px;
     padding: 0;
   }
